完成分页操作，准备修复easyui分页刷新页面问题

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -81,4 +81,14 @@
     <servlet-name>AddDish</servlet-name>
     <url-pattern>/addDish</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PageDishList</display-name>
+    <servlet-name>PageDishList</servlet-name>
+    <servlet-class>com.wangyanci.servlet.PageDishList</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PageDishList</servlet-name>
+    <url-pattern>/pageDishList</url-pattern>
+  </servlet-mapping>
 </web-app>
