修复管理菜品用==而不是equals（）导致产生的bug

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -121,4 +121,14 @@
     <servlet-name>UpdateDishState</servlet-name>
     <url-pattern>/updateDishState</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddDishToCart</display-name>
+    <servlet-name>AddDishToCart</servlet-name>
+    <servlet-class>com.wangyanci.servlet.AddDishToCart</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddDishToCart</servlet-name>
+    <url-pattern>/addDishToCart</url-pattern>
+  </servlet-mapping>
 </web-app>
