餐桌展示给用户页面后台完成，ui与后台交互未验证，ui需完成条件组合查询

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -201,4 +201,74 @@
     <servlet-name>PicUpload</servlet-name>
     <url-pattern>/picUpload</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListTable</display-name>
+    <servlet-name>ListTable</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ListTable</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListTable</servlet-name>
+    <url-pattern>/listTable</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FindById</display-name>
+    <servlet-name>FindById</servlet-name>
+    <servlet-class>com.wangyanci.servlet.FindById</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindById</servlet-name>
+    <url-pattern>/findById</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditTable</display-name>
+    <servlet-name>EditTable</servlet-name>
+    <servlet-class>com.wangyanci.servlet.EditTable</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditTable</servlet-name>
+    <url-pattern>/editTable</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteTable</display-name>
+    <servlet-name>DeleteTable</servlet-name>
+    <servlet-class>com.wangyanci.servlet.DeleteTable</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteTable</servlet-name>
+    <url-pattern>/deleteTable</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ChangStateTable</display-name>
+    <servlet-name>ChangStateTable</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ChangStateTable</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChangStateTable</servlet-name>
+    <url-pattern>/changStateTable</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ShowOrder</display-name>
+    <servlet-name>ShowOrder</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ShowOrder</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowOrder</servlet-name>
+    <url-pattern>/showOrder</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListTableToUser</display-name>
+    <servlet-name>ListTableToUser</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ListTableToUser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListTableToUser</servlet-name>
+    <url-pattern>/listTableToUser</url-pattern>
+  </servlet-mapping>
 </web-app>
