开始写论文

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -291,4 +291,64 @@
     <servlet-name>PayForOrder</servlet-name>
     <url-pattern>/payForOrder</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ShowNoPayOrder</display-name>
+    <servlet-name>ShowNoPayOrder</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ShowNoPayOrder</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowNoPayOrder</servlet-name>
+    <url-pattern>/showNoPayOrder</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PayOrder</display-name>
+    <servlet-name>PayOrder</servlet-name>
+    <servlet-class>com.wangyanci.servlet.PayOrder</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PayOrder</servlet-name>
+    <url-pattern>/payOrder</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PayLatter</display-name>
+    <servlet-name>PayLatter</servlet-name>
+    <servlet-class>com.wangyanci.servlet.PayLatter</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PayLatter</servlet-name>
+    <url-pattern>/payLatter</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ShowPayOrder</display-name>
+    <servlet-name>ShowPayOrder</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ShowPayOrder</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowPayOrder</servlet-name>
+    <url-pattern>/showPayOrder</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListOrder</display-name>
+    <servlet-name>ListOrder</servlet-name>
+    <servlet-class>com.wangyanci.servlet.ListOrder</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListOrder</servlet-name>
+    <url-pattern>/listOrder</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FindOrderById</display-name>
+    <servlet-name>FindOrderById</servlet-name>
+    <servlet-class>com.wangyanci.servlet.FindOrderById</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindOrderById</servlet-name>
+    <url-pattern>/findOrderById</url-pattern>
+  </servlet-mapping>
 </web-app>
